--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build"
+  },
+  "engines": {
+    "node": "^8.11.3",
+    "npm": "^6.2.0"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -32,10 +39,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
+    
     "@angular-devkit/build-angular": "~0.6.8",
     "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.8",
+    
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
