--- a/package.json
+++ b/package.json
@@ -8,16 +8,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build"
-  },
-  "engines": {
-    "node": "^8.11.3",
-    "npm": "^6.2.0"
+     "postinstall": "ng build --aot --target=production"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
+      "@angular/cli": "~6.0.8",
+     "@angular/compiler-cli": "^6.0.3",
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -36,13 +32,14 @@
     "firebase": "^5.3.1",
     "ngx-spinner": "^6.1.2",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "typescript": "~2.7.2",
   },
   "devDependencies": {
-    
+   
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     
+  
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -58,5 +55,9 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
+  },
+  "engines":{
+  "node":"8.9.4",
+    "npm":"5.6.0"
   }
 }
